--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,22 @@
 [tool.poetry]
 name = "vkgifsbot"
-version = "2"
+version = "3"
 description = "Inline Телеграм бот для отправки GIF-изображений из ВКонтакте"
 authors = ["yepIwt <ReetRay@protonmail.com>"]
 license = "GPLv3"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
-aiogram = "2.25.1"
-vkbottle = "^4.3.12"
-loguru = "^0.7.0"
-pre-commit = "^3.4.0"
-flake8 = "^6.1.0"
-python-dotenv = "^1.0.0"
+python = "^3.12"
+pydantic = "^2.6.3"
+pydantic-settings = "^2.2.1"
+fastapi = "^0.110.0"
+sqlalchemy = "^2.0.28"
+punq = "^0.7.0"
+asyncpg = "^0.29.0"
+unicorn = "^2.0.1.post1"
+uvicorn = "^0.27.1"
+orjson = "^3.9.15"
 
 
 [build-system]
