--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ asyncpg = "^0.29.0"
 unicorn = "^2.0.1.post1"
 uvicorn = "^0.27.1"
 orjson = "^3.9.15"
+alembic = "^1.13.1"
+psycopg2 = "^2.9.9"
 
 
 [build-system]
